--- a/AutoCADIODemoWebApp/AutoCADIODemoWebApp.csproj
+++ b/AutoCADIODemoWebApp/AutoCADIODemoWebApp.csproj
@@ -47,7 +47,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AutoCADIOUtil">
-      <HintPath>..\..\AutoCADIOUtil\AutoCADIOUtil\bin\Debug\AutoCADIOUtil.dll</HintPath>
+      <HintPath>..\..\library-dotnet-autocad.io\AutoCADIOUtil\bin\Debug\AutoCADIOUtil.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Data.Edm, Version=5.6.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -199,12 +199,15 @@
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="Global.asax" />
+    <Content Include="Images\autodesklogo.png" />
     <Content Include="Images\Preview.png" />
+    <Content Include="Images\WoodVertical.jpg" />
     <Content Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </Content>
-    <None Include="Properties\PublishProfiles\MakeMyCloset.pubxml" />
+    <None Include="Properties\PublishProfiles\makemycloset - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\makemycloset - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
@@ -215,7 +218,9 @@
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\modernizr-2.5.3.js" />
     <Content Include="Scripts\View-Data.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
