--- a/AutoCADIODemoWebApp/Web.config
+++ b/AutoCADIODemoWebApp/Web.config
@@ -16,8 +16,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="AWSProfileName" value="" />
-    <add key="AWSAccessKey" value="AKIAJC6Y4QJ3G3AX2X6A" />
-    <add key="AWSSecretKey" value="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" />
+    <add key="AWSAccessKey" value="" />
+    <add key="AWSSecretKey" value="" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -93,16 +93,16 @@
   <applicationSettings>
     <MvcApplication2.Properties.Settings>
       <setting name="ForgeClientId" serializeAs="String">
-        <value>8OePgWVxvrcukIW2gTNjS2gdfIGQgNp1</value>
+        <value></value>
       </setting>
       <setting name="ForgeClientSecret" serializeAs="String">
-        <value>M1zVhW9JaNO8vAi2</value>
+        <value></value>
       </setting>
       <setting name="S3BucketName" serializeAs="String">
-        <value>xiaodongforgetestio</value>
+        <value></value>
       </setting>
       <setting name="ForgeBucket" serializeAs="String">
-        <value>autocaddawebapp</value>
+        <value></value>
       </setting>
     </MvcApplication2.Properties.Settings>
   </applicationSettings>
